--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
-project(untitled)
+project(UNTITLED)
+set(HOME "C:\\work\\untitled")
+message(STATUS "home:${HOME}")
+add_subdirectory(mysql)
+add_subdirectory(test)
 
-set(CMAKE_CXX_STANDARD 11)
-
-add_executable(untitled main.cpp)
