--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,8 @@ message(STATUS "${CMAKE_CURRENT_BINARY_DIR}")
 message(STATUS "${PROJECT_BINARY_DIR}")
 message(STATUS "${CMAKE_MODULE_PATH}")
 message(STATUS "-----------------------")
+set(EXECUTABLE_OUTPUT_PATH ${SOURCE_HOME}/bin)
 
 #add_subdirectory(calc)
-add_subdirectory(stl)
+#add_subdirectory(stl)
+add_subdirectory(test)
