增加模板代码

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 project(TEST)
 
-set(CMAKE_PREFIX_PATH "${SOURCE_HOME}/lib64/cmake")
+#set(CMAKE_PREFIX_PATH "${SOURCE_HOME}/lib64/cmake")
 
 add_executable(TEST main.cpp)
-find_package(CALC REQUIRED)
-target_link_libraries(TEST CALC::CALC)
+#find_package(CALC REQUIRED)
+#target_link_libraries(TEST CALC::CALC)
