--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,8 @@ message(STATUS "-----------------------")
 set(EXECUTABLE_OUTPUT_PATH ${SOURCE_HOME}/bin)
 
 #add_subdirectory(calc)
-add_subdirectory(stl)
-add_subdirectory(leetcode)
-add_subdirectory(template)
+#add_subdirectory(stl)
+#add_subdirectory(leetcode)
+#add_subdirectory(template)
+add_subdirectory(student)
 #add_subdirectory(test)
